# status-dashboard

./: .drone.yml  Dockerfile  Dockerfile.api  Dockerfile.web  run.sh
backend/: Cargo.toml  status_dashboard.db
backend/.sqlx/: query-0ce1c27ea54e522f1505110a5302f925d3ed951686a2ac3d39458b6acf51f8ac.json
backend/migrations/: 001_create_services.sql  002_create_check_results.sql  003_create_incidents.sql  004_create_systems.sql  006_create_service_systems.sql  007_timestamps_and_boolean.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/checkers/: aws_billing.rs  chart_query.rs  database.rs  http_body.rs  mod.rs  php_site.rs  sql_query.rs
backend/src/models/: check_result.rs  incident.rs  service.rs  system.rs
backend/src/routes/: check_results.rs  incidents.rs  mod.rs  services.rs  systems.rs
backend/src/scheduler/: mod.rs  worker.rs
backend/src/ws/: messages.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: http.ts
frontend/src/components/: ChartWidget.vue  CheckHistory.vue  IncidentList.vue  ServiceCard.vue  ServiceDetail.vue  ServiceGrid.vue  ServiceModal.vue  StatusBadge.vue  SystemCard.vue  TvDashboard.vue  TvServiceSlice.vue  TvSystemColumn.vue  WsIndicator.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/stores/: checkResults.ts  incidents.ts  services.ts
frontend/src/types/: index.ts
frontend/src/utils/: serviceDetail.ts
provider/src/: main.rs
