[package]
name = "status-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.13.3", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"
futures-util = "0.3"
